--- a/Transfer.Web/Views/Carrier/Carrier.cshtml
+++ b/Transfer.Web/Views/Carrier/Carrier.cshtml
@@ -45,7 +45,7 @@
                             }
                             else
                             {
-                                <div class="col-12 r-logo text-center"><img alt="" src='@Url.Action("GetFile", "File", new { fileId = Model.LogoFileId.Value } )' /></div>
+                                <div class="col-12 r-logo text-center" style="border: solid 1px #0f4c71; height: 224px; border-radius: 18px; background-position: center center; background-size: cover; background-image: url('@Url.Action("GetFile", "File", new { fileId = Model.LogoFileId.Value } )');"></div>
                             }
                         </div>
                         <div class="row"><div class="col-12 text-center"><i class="fas fa-star fs-sm" style="color: #ecbf54"></i><i class="fas fa-star fs-sm" style="color: #ecbf54"></i><i class="fas fa-star fs-sm" style="color: #ecbf54"></i><i style="color: #ecbf54" class="far fa-star fs-sm"></i><i style="color: #ecbf54" class="far fa-star fs-sm"></i></div></div>
