--- a/Transfer.Web/Views/Carrier/Save.cshtml
+++ b/Transfer.Web/Views/Carrier/Save.cshtml
@@ -25,7 +25,7 @@
         <div class="t-col col-12 col-md-6">
             <div class="row">
                 <div class="t-col col-12 white-text">
-                    Город: <span class="red-text">*</span>
+                    Регион: <span class="red-text">*</span>
                 </div>
             </div>
             <div class="row">
@@ -55,7 +55,7 @@
     <div class="row form-row"></div>
     <div class="row form-row">
         <div class="t-col col-12 white-text">
-            Юридический адрес: <span class="red-text">*</span>
+            Юридический адрес:
         </div>
     </div>
     <div class="row form-row">
@@ -90,7 +90,7 @@
                 <div class="col-12">
                     <div class="input-group input-group-icon">
                         <i class="fas fa-pencil-alt input-group-text"></i>
-                        <input type="tel" asp-for="Phone" class="form-control" />
+                        <input type="tel" asp-for="Phone" class="form-control phone_mask" />
                     </div>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                 <div class="col-12">
                     <div class="input-group input-group-icon">
                         <i class="fas fa-pencil-alt input-group-text"></i>
-                        <input type="email" asp-for="Email" class="form-control" />
+                        <input type="email" asp-for="Email" class="form-control email_mask" />
                     </div>
                 </div>
             </div>
@@ -142,19 +142,19 @@
     </div>
     <div class="row form-row"></div>
     <div class="row form-row">
-        <div class="t-col col-12 white-text">
-            Наименование банка: <span class="red-text">*</span>
-        </div> 
-    </div>
-    <div class="row form-row">
-        <div class="t-col col-12 form-group">
-            <div class="input-group input-group-icon">
-                <i class="fas fa-pencil-alt input-group-text"></i>
-                <input asp-for="BankName" class="form-control" />
+        <div class="t-col col-12 col-md-6 form-group">
+            <div class="row">
+                <div class="col-12 white-text">
+                    Наименование банка: <span class="red-text">*</span>
+                </div>
+                <div class="col-12 white-text">
+                    <div class="input-group input-group-icon">
+                        <i class="fas fa-pencil-alt input-group-text"></i>
+                        <input asp-for="BankName" class="form-control" />
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="row form-row">
         <div class="t-col col-12 col-md-3 form-group">
             <div class="row">
                 <div class="col-12 white-text">
@@ -163,52 +163,11 @@
                 <div class="col-12 white-text">
                     <div class="input-group input-group-icon">
                         <i class="fas fa-pencil-alt input-group-text"></i>
-                        <input asp-for="Bik" class="form-control" />
+                        <input asp-for="Bik" class="form-control bik_mask" />
                     </div>
                 </div>
             </div>
         </div>
-        <div class="t-col col-12 col-md-3 form-group">
-            <div class="row">
-                <div class="col-12 white-text">
-                    ИНН Банка: <span class="red-text">*</span>
-                </div>
-                <div class="col-12 white-text">
-                    <div class="input-group input-group-icon">
-                        <i class="fas fa-pencil-alt input-group-text"></i>
-                        <input asp-for="BankInn" class="form-control" />
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="t-col col-12 col-md-3 form-group">
-            <div class="row">
-                <div class="col-12 white-text">
-                    КПП: <span class="red-text">*</span>
-                </div>
-                <div class="col-12 white-text">
-                    <div class="input-group input-group-icon">
-                        <i class="fas fa-pencil-alt input-group-text"></i>
-                        <input asp-for="Kpp" class="form-control" />
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="t-col col-12 col-md-3 form-group">
-            <div class="row">
-                <div class="col-12 white-text">
-                    Кор. счет: <span class="red-text">*</span>
-                </div>
-                <div class="col-12 white-text">
-                    <div class="input-group input-group-icon">
-                        <i class="fas fa-pencil-alt input-group-text"></i>
-                        <input asp-for="KorAccount" class="form-control" />
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row form-row">
         <div class="t-col col-12 col-md-3 form-group">
             <div class="row">
                 <div class="col-12 white-text">
@@ -217,70 +176,57 @@
                 <div class="col-12 white-text">
                     <div class="input-group input-group-icon">
                         <i class="fas fa-pencil-alt input-group-text"></i>
-                        <input asp-for="NumAccount" class="form-control" />
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="t-col col-12 col-md-9 form-group">
-            <div class="row">
-                <div class="col-12 white-text">
-                    Наименование получателя: <span class="red-text">*</span>
-                </div>
-                <div class="col-12 white-text">
-                    <div class="input-group input-group-icon">
-                        <i class="fas fa-pencil-alt input-group-text"></i>
-                        <input asp-for="NameAccount" class="form-control" />
+                        <input asp-for="NumAccount" class="form-control numaccount_mask" />
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="row blank-row"></div>
-            <div class="row">
-                <div class="col-12 col-md-8">
-                    <h2 class="white-text">Копии документов:</h2>
-                    <div class="row form-row">
-                        <input asp-for="LicenceFileId" type="hidden" class="file-result-id">
-                        <div class="t-col file-upl col-12 @(!Model.LicenceFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
-                            <div class="row">
-                                <div class="t-col col-12 white-text">
-                                    Скан лицензии на пассажирские перевозки: <span class="red-text">*</span>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="t-col col-10 form-group">
-                                    <input type="text" class="form-control file-result-name" readonly="readonly" />
-                                </div>
-                                <div class="t-col col-2 form-group">
-                                    <input type="file" class="form-control input-file">
-                                </div>
-                            </div>
+    <div class="row">
+        <div class="col-12 col-md-8">
+            <h2 class="white-text">Копии документов:</h2>
+            <div class="row form-row">
+                <input asp-for="LicenceFileId" type="hidden" class="file-result-id">
+                <div class="t-col file-upl col-12 @(!Model.LicenceFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
+                    <div class="row">
+                        <div class="t-col col-12 white-text">
+                            Скан лицензии на пассажирские перевозки: <span class="red-text">*</span>
                         </div>
-                        <div class="t-col file-dwn white-text col-12 form-group @(Model.LicenceFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
-                            Скан лицензии на пассажирские перевозки: <a href="/File/GetFile?fileId=@Model.LicenceFileId" target="_blank" class="dwn-link"><i class="fas fa-cloud-download-alt"></i> скачать</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:void(0);" onclick="DeleteFile(this)" class="dwn-link"><i class="fas fa-times"></i> удалить</a>
+                    </div>
+                    <div class="row">
+                        <div class="t-col col-10 form-group">
+                            <input type="text" class="form-control file-result-name" readonly="readonly" />
+                        </div>
+                        <div class="t-col col-2 form-group">
+                            <input type="file" class="form-control input-file">
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-4">
-                    <h2 class="white-text">Логотип компании:</h2>
-                    <div class="row blank-row d-none d-md-block"></div>
-                    <div class="form-row">
-                        <input asp-for="LogoFileId" type="hidden" class="file-result-id">
-                        <div class="col-12 col-md-6 col-p-e @(!Model.LogoFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
-                            <div style="border: 1px dashed #007896; height: 200px; border-radius: 9px;">
-                                <input type="file" class="form-control input-photo-file">
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-6 col-p-u @(Model.LogoFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
-                            <div class="col-p-u-i" style="border: 1px dashed #007896; height: 200px; border-radius: 9px; background-position: center center; background-size: cover; background-image: url('/File/GetFile?fileId=@Model.LogoFileId'">
-                                <a href="javascript:void(0);" class="i-button" onclick="DeleteFile(this)"><div class="add-photo-link"><i class="fas fa-times-circle"></i></div></a>
-                            </div>
-                        </div>
+                <div class="t-col file-dwn white-text col-12 form-group @(Model.LicenceFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
+                    Скан лицензии на пассажирские перевозки: <a href="/File/GetFile?fileId=@Model.LicenceFileId" target="_blank" class="dwn-link"><i class="fas fa-cloud-download-alt"></i> скачать</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:void(0);" onclick="DeleteFile(this)" class="dwn-link"><i class="fas fa-times"></i> удалить</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-4">
+            <h2 class="white-text">Логотип компании:</h2>
+            <div class="row blank-row d-none d-md-block"></div>
+            <div class="form-row">
+                <input asp-for="LogoFileId" type="hidden" class="file-result-id">
+                <div class="col-12 col-md-6 col-p-e @(!Model.LogoFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
+                    <div style="border: 1px dashed #007896; height: 200px; border-radius: 9px;">
+                        <input type="file" class="form-control input-photo-file">
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-p-u @(Model.LogoFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
+                    <div class="col-p-u-i" style="border: 1px dashed #007896; height: 200px; border-radius: 9px; background-position: center center; background-size: cover; background-image: url('/File/GetFile?fileId=@Model.LogoFileId'">
+                        <a href="javascript:void(0);" class="i-button" onclick="DeleteFile(this)"><div class="add-photo-link"><i class="fas fa-times-circle"></i></div></a>
                     </div>
                 </div>
             </div>
-            <div class="row blank-row"></div>
+        </div>
+    </div>
+    <div class="row blank-row"></div>
     <div class="row form-row">
         <div class="t-col col-12 chk-label form-group">
             <input id="Agreement" asp-for="Agreement" class="form-check-input" />
