--- a/Transfer.Web/Views/Bus/Save.cshtml
+++ b/Transfer.Web/Views/Bus/Save.cshtml
@@ -184,7 +184,7 @@
                         <div class="t-col col-12 white-text">
                             <div class="input-group input-group-icon">
                                 <i class="fas fa-pencil-alt input-group-text"></i>
-                                <input asp-for="PeopleCopacity" class="form-control" />
+                                <input asp-for="RegSeries" class="form-control" />
                             </div>
                         </div>
                     </div>
@@ -197,26 +197,25 @@
                         <div class="t-col col-12 white-text">
                             <div class="input-group input-group-icon">
                                 <i class="fas fa-pencil-alt input-group-text"></i>
-                                <input asp-for="PeopleCopacity" class="form-control" />
+                                <input asp-for="RegNumber" class="form-control" />
                             </div>
                         </div>
                     </div>
                 </div>
-
             </div>
             <div class="row form-row">
                 <input asp-for="OsagoFileId" type="hidden" class="form-control file-result-id">
-                <div class="t-col file-upl col-12 col-md-8 @(!Model.OsagoFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
+                <div class="t-col file-upl col-12 col-md-6 @(!Model.OsagoFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
                     <div class="row">
                         <div class="t-col col-12 white-text">
                             ОСАГО: <span class="red-text">*</span>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="t-col col-10 form-group">
+                        <div class="t-col col-9 form-group">
                             <input type="text" class="form-control file-result-name" readonly="readonly" />
                         </div>
-                        <div class="t-col col-2 form-group">
+                        <div class="t-col col-3 form-group">
                             <input type="file" class="form-control input-file">
                         </div>
                     </div>
@@ -224,26 +223,79 @@
                 <div class="t-col file-dwn white-text col-12 form-group @(Model.OsagoFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
                     Полис ОСАГО: <a href="/File/GetFile?fileId=@Model.OsagoFileId" target="_blank" class="dwn-link"><i class="fas fa-cloud-download-alt"></i> скачать</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:void(0);" onclick="DeleteFile(this)" class="dwn-link"><i class="fas fa-times"></i> удалить</a>
                 </div>
+                <div class="t-col col-12 col-md-3 form-group">
+                    <div class="row">
+                        <div class="t-col col-12 white-text">
+                            Серия: <span class="red-text">*</span>
+                        </div>
+                        <div class="t-col col-12 white-text">
+                            <div class="input-group input-group-icon">
+                                <i class="fas fa-pencil-alt input-group-text"></i>
+                                <input asp-for="OSAGOSeries" class="form-control" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="t-col col-12 col-md-3 form-group">
+                    <div class="row">
+                        <div class="t-col col-12 white-text">
+                            Номер: <span class="red-text">*</span>
+                        </div>
+                        <div class="t-col col-12 white-text">
+                            <div class="input-group input-group-icon">
+                                <i class="fas fa-pencil-alt input-group-text"></i>
+                                <input asp-for="OSAGONumber" class="form-control" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <div class="row form-row">
                 <input asp-for="ToFileId" type="hidden" class="form-control file-result-id">
-                <div class="t-col file-upl col-12 col-md-8 @(!Model.ToFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
+                <div class="t-col file-upl col-12 col-md-6 @(!Model.ToFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
                     <div class="row">
                         <div class="t-col col-12 white-text">
                             Талон техосмотра: <span class="red-text">*</span>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="t-col col-10 form-group">
+                        <div class="t-col col-9 form-group">
                             <input type="text" class="form-control file-result-name" readonly="readonly" />
                         </div>
-                        <div class="t-col col-2 form-group">
+                        <div class="t-col col-3 form-group">
                             <input type="file" class="form-control input-file">
                         </div>
                     </div>
                 </div>
                 <div class="t-col file-dwn white-text col-12 form-group @(Model.ToFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
                     Диагностическая карта: <a href="/File/GetFile?fileId=@Model.ToFileId" target="_blank" class="dwn-link"><i class="fas fa-cloud-download-alt"></i> скачать</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:void(0);" onclick="DeleteFile(this)" class="dwn-link"><i class="fas fa-times"></i> удалить</a>
+                </div>
+                <div class="t-col col-12 col-md-3 form-group">
+                    <div class="row">
+                        <div class="t-col col-12 white-text">
+                            Номер: <span class="red-text">*</span>
+                        </div>
+                        <div class="t-col col-12 white-text">
+                            <div class="input-group input-group-icon">
+                                <i class="fas fa-pencil-alt input-group-text"></i>
+                                <input asp-for="ToNumber" class="form-control" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="t-col col-12 col-md-3 form-group">
+                    <div class="row">
+                        <div class="t-col col-12 white-text">
+                            Срок действия: <span class="red-text">*</span>
+                        </div>
+                        <div class="t-col col-12 white-text">
+                            <div class="input-group input-group-icon">
+                                <i class="fas fa-pencil-alt input-group-text"></i>
+                                <input asp-for="ToDate" type="date" class="form-control" min="@DateTime.Now.AddDays(30).ToString("yyyy-MM-dd")" />
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row form-row">
