--- a/Transfer.Web/Views/Carrier/Save.cshtml
+++ b/Transfer.Web/Views/Carrier/Save.cshtml
@@ -25,7 +25,7 @@
         <div class="t-col col-12 col-md-6">
             <div class="row">
                 <div class="t-col col-12 white-text">
-                    Регион: <span class="red-text">*</span>
+                    Регион:
                 </div>
             </div>
             <div class="row">
@@ -41,7 +41,7 @@
     <div class="row form-row"></div>
     <div class="row form-row">
         <div class="t-col col-12 white-text">
-            Полное наименование компании в соответствии с уставом: <span class="red-text">*</span>
+            Полное наименование компании в соответствии с уставом:
         </div>
     </div>
     <div class="row form-row">
@@ -145,7 +145,7 @@
         <div class="t-col col-12 col-md-6 form-group">
             <div class="row">
                 <div class="col-12 white-text">
-                    Наименование банка: <span class="red-text">*</span>
+                    Наименование банка:
                 </div>
                 <div class="col-12 white-text">
                     <div class="input-group input-group-icon">
@@ -158,7 +158,7 @@
         <div class="t-col col-12 col-md-3 form-group">
             <div class="row">
                 <div class="col-12 white-text">
-                    БИК: <span class="red-text">*</span>
+                    БИК:
                 </div>
                 <div class="col-12 white-text">
                     <div class="input-group input-group-icon">
@@ -171,7 +171,7 @@
         <div class="t-col col-12 col-md-3 form-group">
             <div class="row">
                 <div class="col-12 white-text">
-                    Номер счета: <span class="red-text">*</span>
+                    Номер счета:
                 </div>
                 <div class="col-12 white-text">
                     <div class="input-group input-group-icon">
@@ -191,7 +191,7 @@
                 <div class="t-col file-upl col-12 @(!Model.LicenceFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
                     <div class="row">
                         <div class="t-col col-12 white-text">
-                            Скан лицензии на пассажирские перевозки: <span class="red-text">*</span>
+                            Скан лицензии на пассажирские перевозки:
                         </div>
                     </div>
                     <div class="row">
