--- a/Transfer.Web/Views/Carrier/Save.cshtml
+++ b/Transfer.Web/Views/Carrier/Save.cshtml
@@ -3,6 +3,7 @@
 
 @Html.AntiForgeryToken()
 @Html.HiddenFor(x => x.Id)
+@Html.HiddenFor(x => x.State)
 
 <div class="container the-form">
     <div class="row blank-row"></div>
