--- a/Transfer.Web/Views/TripRequest/Save.cshtml
+++ b/Transfer.Web/Views/TripRequest/Save.cshtml
@@ -44,6 +44,7 @@
         @Html.HiddenFor(x => x.Id)
         @Html.HiddenFor(x => x.ChartererId)
         @Html.HiddenFor(x => x.LastUpdateTick)
+        @Html.HiddenFor(x => x.State)
 
         <div class="container the-form">
             <div class="row blank-row"></div>
