--- a/Transfer.Web/Views/Driver/Save.cshtml
+++ b/Transfer.Web/Views/Driver/Save.cshtml
@@ -51,6 +51,7 @@
         @Html.HiddenFor(x => x.Id)
         @Html.HiddenFor(x => x.LastUpdateTick)
         @Html.HiddenFor(x => x.OrganisationId)
+        @Html.HiddenFor(x => x.State)
 
         <div class="container the-form">
             <div class="row blank-row"></div>
