--- a/Transfer.Web/Views/Carrier/SearchResults.cshtml
+++ b/Transfer.Web/Views/Carrier/SearchResults.cshtml
@@ -81,7 +81,6 @@
 @foreach (var c in Model.Results)
 {
     <hr style="color: #fff; border: dashed 1px #007896;">
-    <div class="row blank-row"></div>
     <div class="row">
         <div class="col-2">
             <div class="row">
@@ -91,7 +90,9 @@
                 }
                 else
                 {
-                    <div class="col-12 r-logo text-center" style="border: solid 1px #0f4c71; height: 224px; border-radius: 18px; background-position: center center; background-size: cover; background-image: url('@Url.Action("GetFile", "File", new { fileId = c.Picture.Value } )');"></div>
+                    <div class="col-12 text-center">
+                        <div class="r-logo" style="margin: auto; border: solid 1px #0f4c71; height: 140px; width: 135px; border-radius: 18px; background-position: center center; background-size: cover; background-image: url('@Url.Action("GetFile", "File", new { fileId = c.Picture.Value } )');"></div>
+                    </div>
                 }
             </div>
 
@@ -110,13 +111,12 @@
                     <a asp-action="CarrierItem" asp-controller="Carrier" asp-route-carrierId="@c.Id" class="dark-link-basic"><span style="font-size: 1.2rem;">@c.Name</span></a> <i class="fas fa-star fs-sm" style="color: #ecbf54"></i><i class="fas fa-star fs-sm" style="color: #ecbf54"></i><i class="fas fa-star fs-sm" style="color: #ecbf54"></i><i class="far fa-star fs-sm"></i><i class="far fa-star fs-sm"></i>
                 </div>
             </div>
-            <div class="row blank-row"></div>
+            <div class="blank-row"></div>
             <div class="row carrier">
                 <div class="t-col col-12">
                     <i class="fas fa-map-marked"></i> <span style="color: #000;">@c.Address</span>
                 </div>
             </div>
-            <div class="row blank-row"></div>
             <div class="row carrier">
                 <div class="t-col col-md-10 col-12 contacts">
                     <i class="far fa-user-circle"></i> @c.ContactFio, <a href="#">@c.ContactPhone</a>, <a href="#">@c.ContactEmail</a>
@@ -127,7 +127,6 @@
             </div>
         </div>
     </div>
-    <div class="row blank-row"></div>
 }
 <hr style="color: #007896; border: dashed 1px #007896;">
 <div class="row blank-row"></div>
