--- a/Transfer.Web/wwwroot/css/main.css
+++ b/Transfer.Web/wwwroot/css/main.css
@@ -82,7 +82,8 @@ a.link-light-yellow-du {
     width: auto;
     border: 0;
     padding: 0;
-    margin: 18px 0;
+    /*margin: 18px 0;*/
+    margin: 0;
 }
 
 
