--- a/Transfer.Web/Views/TripRequest/SearchResults.cshtml
+++ b/Transfer.Web/Views/TripRequest/SearchResults.cshtml
@@ -67,13 +67,15 @@
                         <div class="row">
                             <div class="col-3">
                                 <div class="row">
-                                    @if(c.Picture.IsNullOrEmpty())
+                                    @if (c.Picture.IsNullOrEmpty())
                                     {
                                         <div class="col-12 r-logo text-center"><img alt="" src="~/images/TR_PER_logo_NName.png" style="margin: 18px 0;" /></div>
                                     }
                                     else
                                     {
-                                        <div class="col-12 r-logo text-center" style="border: solid 1px #0f4c71; height: 144px; border-radius: 18px; background-position: center center; background-size: cover; background-image: url('@Url.Action("GetFile", "File", new { fileId = c.Picture.Value } )');"></div>
+                                        <div class="col-12 text-center">
+                                            <div class="r-logo" style="margin: auto; border: solid 1px #0f4c71; height: 140px; width: 135px; border-radius: 18px; background-position: center center; background-size: cover; background-image: url('@Url.Action("GetFile", "File", new { fileId = c.Picture.Value } )');"></div>
+                                        </div>
                                         <div class="row blank-row"></div>
                                     }
 
