--- a/Transfer.Web/Views/Shared/_Layout.cshtml
+++ b/Transfer.Web/Views/Shared/_Layout.cshtml
@@ -25,12 +25,12 @@
                     <a href="/">
                         <i class="fab fa-vk fa-lg"></i>
                     </a>
-                    <a href="/">
+@*                    <a href="/">
                         <i class="fab fa-instagram-square fa-lg"></i>
                     </a>
                     <a href="/">
                         <i class="fab fa-facebook-square fa-lg"></i>
-                    </a>
+                    </a>*@
                     <a href="/">
                         <i class="fab fa-telegram fa-lg"></i>
                     </a>
@@ -143,12 +143,12 @@
                     <a href="/">
                         <i class="fab fa-vk fa-lg"></i>
                     </a>
-                    <a href="/">
+@*                    <a href="/">
                         <i class="fab fa-instagram-square fa-lg"></i>
                     </a>
                     <a href="/">
                         <i class="fab fa-facebook-square fa-lg"></i>
-                    </a>
+                    </a>*@
                     <a href="/">
                         <i class="fab fa-telegram fa-lg"></i>
                     </a>
