--- a/Transfer.Web/Views/Carrier/Assets.cshtml
+++ b/Transfer.Web/Views/Carrier/Assets.cshtml
@@ -24,7 +24,7 @@
             Выводить по:
         </div>
         <div class="t-col col-1 text-end form-group">
-            @Html.DropDownListFor(x => x.PageSize, new List<SelectListItem> { new SelectListItem("5", "5"), new SelectListItem("10", "10"), new SelectListItem("25", "25") }, null, new { @class = "form-select form-select-sm", @onchange="DisableCheckboxes(this)" })
+            @Html.DropDownListFor(x => x.PageSize, new List<SelectListItem> { new SelectListItem("5", "5"), new SelectListItem("10", "10"), new SelectListItem("25", "25"), new SelectListItem("50", "50") }, null, new { @class = "form-select form-select-sm", @onchange="DisableCheckboxes(this)" })
         </div>
     </div>
     <hr style="color: #007896; border: dashed 1px #007896;">
@@ -44,7 +44,7 @@
     {
         <hr style="color: #fff; border: dashed 1px #007896;">
         <div class="row">
-            <div class="col-2">
+@*            <div class="col-2">
                 <div class="row">
                     @if (c.Picture.IsNullOrEmpty())
                     {
@@ -57,8 +57,8 @@
                         </div>
                     }
                 </div>
-            </div>
-            <div class="col-10 assert-info">
+            </div>*@
+            <div class="col-12 assert-info">
                 <div class="row">
                     <div class="col-12"><strong>@c.Name</strong></div>
                 </div>
