--- a/Transfer.Web/Views/Carrier/SearchResults.cshtml
+++ b/Transfer.Web/Views/Carrier/SearchResults.cshtml
@@ -69,7 +69,7 @@
         Выводить по:
     </div>
     <div class="t-col col-1 text-end form-group">
-        @Html.DropDownListFor(x => x.PageSize, new List<SelectListItem> { new SelectListItem("5", "5"), new SelectListItem("10", "10"), new SelectListItem("25", "25") }, null, new { @class = "form-select form-select-sm", @onchange="DisableCheckboxes(this)" })
+        @Html.DropDownListFor(x => x.PageSize, new List<SelectListItem> { new SelectListItem("5", "5"), new SelectListItem("10", "10"), new SelectListItem("25", "25"), new SelectListItem("50", "50") }, null, new { @class = "form-select form-select-sm", @onchange="DisableCheckboxes(this)" })
     </div>
 </div>
 <hr style="color: #007896; border: dashed 1px #007896;">
@@ -82,7 +82,7 @@
 {
     <hr style="color: #fff; border: dashed 1px #007896;">
     <div class="row">
-        <div class="col-2">
+@*        <div class="col-2">
             <div class="row">
                 @if (c.Picture.IsNullOrEmpty())
                 {
@@ -96,8 +96,8 @@
                 }
             </div>
 
-        </div>
-        <div class="col-10">
+        </div>*@
+        <div class="col-12">
             <div class="row carrier">
                 <div class="t-col col-12">
                     @if (c.Checked)
